# supershell

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CURRICULUM_GUIDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  TECHNICAL_DEBT.md  TODO.md  install.sh  pyproject.toml  quests.yaml  run.sh  setup.py  supershell.sh  uninstall.sh
.github/workflows/: release.yml  rust.yml
assets/quests/: 00_the_terminal.yml  01_basics.yml  01_boot_camp.yml  02_the_hideout.yml  03_the_infiltration.yml  04_the_cleanup.yml
assets/templates/: template.yml
design/: GDD.md  architecture.md  narrative.md
docs/: content-roadmap.md  playtesting.md  quest-schema.md  story-bible.md
docs/modules/: orientation.md
narrative/: 00_GAME_INDEX.md.md
narrative/01_Game_Flow/: Chapter_0_The_Orphan.md.md  Chapter_1_Home_Sweet_Home.md.md  Chapter_2_The_Multiplexer.md.md
narrative/02_Locations/: The_Firewall.md.md  The_Host.md.md  The_LAN.md.md
narrative/03_Skills_Tutorials/: 00_Basic_Commands.md.md  05_Dotfiles.md.md  Tmux.md.md
narrative/04_Quests/: 00_The_Orphan_Chase.md.md  01_Home_Sweet_Home.md.md  02_The_Ghost_in_the_Train.md
narrative/05_Characters/: Cypher.md.md  The_Hunter_(auditd).md.md  The_Operator.md.md
narrative/06_Game_Mechanics/: The_Hunter_Mechanics.md.md
src/: actions.rs  app.rs  construct.rs  content.rs  engine.rs  main.rs  paths.rs  quest.rs  shell.rs  state.rs  ui.rs  world.rs
src/supershell/: __main__.py  cli.py  client.py  daemon.py
src/supershell/core/: game_loop.py
src/supershell/game/: actions.py  base_quest.py  event_handler.py  models.py  objective_checker.py  quest_manager.py  quest_templater.py  quest_validator.py
src/supershell/game/quests/: quest_00_first_contact.py  quest_01_boot_camp.py
src/supershell/shell/: executor.py  interpreter.py  parser.py
src/supershell/tui/: console.py  cypher.py  dialogue.py  effects.py
supershell/: agent.py  auditors.py  main.py  quest.py
tests/: cli_workflow.rs  test_quest_fail_system.py  test_quest_manager.py
tests/fixtures/: history_quest.yaml  mock_quest.yaml
