[package]
name = "supershell"
version = "0.4.0"
edition = "2024"
authors = ["J. Alex Long <jalexlong@proton.me"]
description = "A gamified terminal tutor that teaches CLI skills via interactive quests."
license = "MIT"
repository = "https://github.com/jalexlong/supershell"
keywords = ["cli", "education", "game", "tutorial"]
categories = ["command-line-utilities", "simulation"]
exclude = ["images/*", ".github/*"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
serde_json = "1.0.145"
serde_yml = "0.0.12"
crossterm = "0.29.0"
textwrap = "0.16.2"
directories = "6.0.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
