[package]
name = "supershell"
version = "0.4.1"
edition = "2024"
authors = ["J. Alex Long <jalexlong@proton.me"]
description = "A terminal-based RPG that teachers command line skills and cybersecurity concepts."
license = "MIT"
repository = "https://github.com/jalexlong/supershell"
homepage = "https://github.com/jalexlong/supershell"
readme = "README.md"
keywords = ["cli", "education", "game", "tutorial", "cybersecurity"]
categories = ["command-line-utilities", "games"]
exclude = ["images/*", ".github/*"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
serde_json = "1.0.145"
serde_yml = "0.0.12"
crossterm = "0.29.0"
textwrap = "0.16.2"
directories = "6.0.0"
include_dir = "0.7.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
