[tool.poetry]
name = "supershell"
version = "0.1.3"
description = "An interactive, story-driven Bash tutorial game using the actual shell."
authors = ["J. Alex Long <jalexlong@proton.me>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.0"
pyyaml = "^6.0"
prompt-toolkit = "^3.0.52"

[tool.poetry.scripts]
supershell = "supershell.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)"
]
