[project]
name = "supershell"
version = "0.2.0"
description = "An interactive, story-driven Bash tutorial game using the actual shell."
readme = "README.md"
authors = [
    { name = "J. Alex Long", email = "jalexlong@proton.me" }
]
requires-python = ">=3.12"

dependencies = [
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
supershell-daemon = "supershell.daemon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# This section is optional but good for pinning package versions if needed
